Add styling to h3 and p tags

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
           </div>
           <hr>
 
-          <section>
-            <div>
+          <section class="form-section">
+            <div class="form-div">
              <h3>Contact me</h3>
              <p>If you have an application you are 
                interested in developing,
@@ -202,4 +202,4 @@
 
 
         </body>
-        </html>>
+        </html>
