Add styling to form input and textarea

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
             <form action="" method="post">
               <input type="text"  placeholder="Okpah Igbo" maxlength="30" required>
               <input type="email"  placeholder="davidopah396@gmail.com" required>
-              <textarea type="text" placeholder="write your message here" requoired></textarea>
+              <textarea type="text"   class="form-text" row="30"  placeholder="write your message here"  maxlegth="500"
+              requoired></textarea>
              <button type="submit">Get in touch</button>
              <img src="">
             </form>
