Add lists to form element

--- a/index.html
+++ b/index.html
@@ -192,14 +192,16 @@
                needs coding. I’d love to help with it </p>
             </div>
             <form action="" method="post">
-              <input type="text"  placeholder="Okpah Igbo" maxlength="30" required>
-              <input type="email"  placeholder="davidopah396@gmail.com" required>
-              <textarea type="text"   class="form-text" row="30"  placeholder="write your message here"  maxlegth="500"
-              requoired></textarea>
-             <button type="submit">Get in touch</button>
-             <img src="">
+              <ul>
+                <li><input type="text"  placeholder="Okpah Igbo" maxlength="30" required></li>
+                <li><input type="email"  placeholder="davidopah396@gmail.com" required></li>
+                <li><textarea type="text"   class="form-text" row="30"  placeholder="write your message here"  maxlegth="500"
+                requoired></textarea></li>
+                <li><button type="submit">Get in touch</button></li>
+                <img src="">
+              </ul>
             </form>
-             </section>
+          </section>
 
 
         </body>
