Add styling to the button

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <li><input type="email"  placeholder="davidopah396@gmail.com" required></li>
                 <li><textarea type="text"   class="form-text" row="30"  placeholder="write your message here"  maxlegth="500"
                 requoired></textarea></li>
-                <li><button type="submit">Get in touch</button></li>
+                <li><button class="btn-1" type="submit">Get in touch</button></li>
                 <img src="">
               </ul>
             </form>
